--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cannon": "autocannon -c 5000 -p 4 -d 20 http://localhost:6000/delay",
     "pm2-start": "pm2 start ecosystem.config.js",
-    "pm2-stop": "pm2 start ecosystem.config.js",
+    "pm2-stop": "pm2 stop ecosystem.config.js",
     "start": "tsc-watch --onSuccess \"cross-env NODE_ENV=development node build/src/index.js\" --onFailure \"echo Beep! Compilation Failed\""
   },
   "repository": {
